--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,4 @@ services:
 
 script:
   - docker build -t nodejs-python .
-  - docker run nodejs-python /bin/sh -c "npm -v && node -v && python --version"
+  - docker run nodejs-python /bin/sh -c "npm -v && node -v && python --version && phantomjs --version && casperjs --version"
